// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component Renders a button which has an icon, text and dropdown arrow 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-search-title"
    className="sc-bwzfXH eyjyQn"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
  <span
    className="sc-bdVaJa hJMgGI"
  >
    <span
      className="Text"
    >
      Button
    </span>
  </span>
  <svg
    aria-labelledby="icon-triangle-down-title"
    className="sc-bwzfXH hqyKWH"
    role="img"
  >
    <title>
      triangle-down
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-triangle-down"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has dropdown arrow 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-triangle-down-title"
    className="sc-bwzfXH hqyKWH"
    role="img"
  >
    <title>
      triangle-down
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-triangle-down"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a large icon 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-search-title"
    className="sc-bwzfXH bKdoCw"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a normal icon 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-search-title"
    className="sc-bwzfXH fOPIKn"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a small icon 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-search-title"
    className="sc-bwzfXH eyjyQn"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a xlarge icon 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-search-title"
    className="sc-bwzfXH bpaUhd"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a xsmall icon 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-search-title"
    className="sc-bwzfXH hqyKWH"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just an icon 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon-search-title"
    className="sc-bwzfXH eyjyQn"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a error button when type is error 1`] = `
<button
  className="sc-htpNat eKoXz"
  onClick={[Function]}
  type="button"
>
  <span
    className="sc-bdVaJa hJMgGI"
  >
    <span
      className="Text"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`The Button component Renders a primary button when no arguments are passed 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
/>
`;

exports[`The Button component Renders a primary button when type is primary 1`] = `
<button
  className="sc-htpNat ivUSgc"
  onClick={[Function]}
  type="button"
>
  <span
    className="sc-bdVaJa hJMgGI"
  >
    <span
      className="Text"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`The Button component Renders a secondary button when type is secondary 1`] = `
<button
  className="sc-htpNat fpOstT"
  onClick={[Function]}
  type="button"
>
  <span
    className="sc-bdVaJa hJMgGI"
  >
    <span
      className="Text"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`The Button component Renders a success button when type is success 1`] = `
<button
  className="sc-htpNat gGHtYq"
  onClick={[Function]}
  type="button"
>
  <span
    className="sc-bdVaJa hJMgGI"
  >
    <span
      className="Text"
    >
      Button
    </span>
  </span>
</button>
`;
